# kc

./: .gitattributes  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: check.yml  main.yml  release.yml
src/: color.rs  config.rs  fc.rs  help.txt  langs.rs  main.rs  options.rs  reporters.rs  scan.rs
src/reporters/: html.rs  html_reporter.css  markdown.rs  terminal.rs  total_lines.rs
src/reporters/testdata/: markdown_output.md
tests/: main.rs  setup.rs
tests/testdata/: kc.html  mixed.html
tests/testdata/gitignore/hidden/: main.rs
tests/testdata/ignore/: .ignore
tests/testdata/mixed/: Makefile  index.ts  kc.gleam  main.rs
