[package]
name = "kc"
version = "0.7.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "Kayla's (line) counter (of code) :)"
keywords = []
license = "MIT"
homepage = "https://github.com/aslilac/kc"
repository = "https://github.com/aslilac/kc"
documentation = "https://docs.rs/crate/kc"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
colored = "2.0.0"
ignore = "0.4.20"
terminal_size = "0.2.6"
