[package]
name = "kc"
version = "1.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "Kayla's (line) counter (of code) :)"
keywords = []
license = "MPL-2.0"
homepage = "https://github.com/aslilac/kc"
repository = "https://github.com/aslilac/kc"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
ignore = "0.4.23"
terminal_size = "0.4.2"
